--- a/index.html
+++ b/index.html
@@ -1,14 +1,27 @@
+<!-- saved from url=(0022)http://internet.e-mail -->
 
-<HTML>
-<HEAD>
-<TITLE>Linking Sample - Index Page</TITLE>
-</HEAD>
+<html>
+<head>
+<title>Table of Contents</title>
+</head>
+<body>
+<h1>Table of Contents</h1>
 
-<BODY>
-
-<H1>Index Page</H1>
-
-<BLOCKQUOTE>This is the Index page for the linking examples in Chapter 
-4.</BLOCKQUOTE>
-</BODY>
-</HTML>
+<h2>Chapter 1</h2>
+	<ul>
+		<li><b>Topic One</b></li>
+		<li><b>Topic Two</b></li>
+		<li><b>Topic Three</b></li>
+	</ul><h2>Chapter 2</h2>
+	<ul>
+		<li><b>Topic One</b></li>
+		<li><b>Topic Two</b></li>
+		<li><b>Topic Three</b></li>
+	</ul><h2>Chapter 3</h2>
+	<ul>
+		<li><b>Topic One</b></li>
+		<li><b>Topic Two</b></li>
+		<li><b>Topic Three</b></li>
+	</ul>
+</body>
+</html>
