--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Table of Contents</h1>
 
-<a href+"chapter1.html"> <h2>Chapter 1 </a> </h2>
+<a href="chapter1.html"> <h2>Chapter 1 </a> </h2>
 	<ul>
 		<li><b>Topic One</b></li>
 		<li><b>Topic Two</b></li>
