--- a/index.html
+++ b/index.html
@@ -25,5 +25,9 @@
 		<li><b>Topic Two</b></li>
 		<li><b>Topic Three</b></li>
 	</ul>
+	
+	<h1> Absolute Link </h1>
+	<a href="https://www.w3schools.com/"> target="_blank" <h2> This is a link to W3Schools </a> </h2>
+	<a href="https://www.taehs.org/"> target="_blank" <h2> This is a link to the Thomas Edison website </a> </h2>
 </body>
 </html>
