--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	</ul>
 	
 	<h1> Absolute Link </h1>
-	<a href="https://www.w3schools.com/"> target="_blank" <h2> This is a link to W3Schools </a> </h2>
-	<a href="https://www.taehs.org/"> target="_blank" <h2> This is a link to the Thomas Edison website </a> </h2>
+	<a href="https://www.w3schools.com/" target="_blank"> <h2> This is a link to W3Schools </a> </h2>
+	<a href="https://www.taehs.org/" target="_blank"> <h2> This is a link to the Thomas Edison website </a> </h2>
 </body>
 </html>
